// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zod > validation > int 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid input: expected int, received number]
`;

exports[`zod > validation > literal int 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid input: expected 1]
`;

exports[`zod > validation > max 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Too big: expected number to be <=1]
`;

exports[`zod > validation > min 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Too small: expected number to be >=5]
`;

exports[`zod > validation > multipleOf 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid number: must be a multiple of 5]
`;
